# GodotCompositorEffectTonemap

./: README.md
godot/: .gitignore  icon.svg.import  project.godot  rust.gdextension  rust.gdextension.uid
godot/glsl/: blur_downsample.glsl  blur_downsample.glsl.import  blur_upsample.glsl  blur_upsample.glsl.import  copy.glsl  copy.glsl.import  tonemap.glsl  tonemap.glsl.import
godot/scene/: test_effects.tscn
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/post_effect/: copy.rs  mod.rs
